--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -7,3 +7,12 @@
   display: grid;
   grid-template-columns: 1fr;
 }
+
+button {
+  all: unset;
+  height: 75px;
+  width: 75px;
+  border: 1px solid black;
+  border-radius: 50%;
+  text-align: center;
+}
