--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -1,18 +1,23 @@
 .wrapper {
   width: 90%;
   margin: 0 auto;
+  height: 100%;
+}
+
+@media screen and (min-width: 768px) {
+  .wrapper {
+    width: 80%;
+  }
 }
 
 .container {
   display: grid;
   grid-template-columns: 1fr;
+  grid-gap: 4rem;
 }
 
-button {
-  all: unset;
-  height: 75px;
-  width: 75px;
-  border: 1px solid black;
-  border-radius: 50%;
-  text-align: center;
+@media screen and (min-width: 768px) {
+  .container {
+    grid-template-columns: 1fr 1fr;
+  }
 }
