added 100% height to body + html, also created night_border class

--- a/src/index.css
+++ b/src/index.css
@@ -3,9 +3,14 @@
 ::after {
   box-sizing: border-box;
 }
+html {
+  height: 100%;
+}
 body {
   margin: 0;
   padding: 0;
+  height: 100%;
+  overflow: hidden;
   background-color: #fff;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
@@ -16,5 +21,9 @@ body {
 .night {
   background-color: #323639;
   color: #fff;
+  height: 100vh;
+}
+
+.night_border {
   border-color: #fff;
 }
