--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -1,13 +1,6 @@
 .wrapper {
   width: 90%;
   margin: 0 auto;
-  height: 100%;
-}
-
-@media screen and (min-width: 768px) {
-  .wrapper {
-    width: 80%;
-  }
 }
 
 .container {
@@ -17,7 +10,15 @@
 }
 
 @media screen and (min-width: 768px) {
+  .wrapper {
+    width: 80%;
+    max-width: 1000px;
+  }
   .container {
     grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
+  }
+  h1 {
+    grid-column: 1/3;
   }
 }
