--- a/src/components/ModeBtn/ModeBtn.css
+++ b/src/components/ModeBtn/ModeBtn.css
@@ -1,10 +1,10 @@
 .switch {
   position: relative;
-  display: flex;
+  display: block;
   width: 60px;
   height: 34px;
-  justify-self: flex-end;
-  top: 16px;
+  justify-self: end;
+  top: 20px;
 }
 
 .switch input {
@@ -58,4 +58,10 @@ input:checked + .slider:before {
 
 .slider.round:before {
   border-radius: 50%;
+}
+
+@media screen and (min-width: 768px) {
+  .switch {
+    grid-column-start: 2;
+  }
 }
