--- a/src/components/Bookmarks/Bookmarks.css
+++ b/src/components/Bookmarks/Bookmarks.css
@@ -1,4 +1,17 @@
 .bookmarks {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr;
+  margin: 0 auto;
+  width: 100%;
+  max-width: 475px;
+  border-left: 5px solid #333;
+  justify-items: center;
+  align-items: center;
+  height: 120px;
+}
+
+@media screen and (min-width: 768px) {
+  .bookmarks {
+    min-width: 475px;
+  }
 }
