--- a/src/components/Search/Search.css
+++ b/src/components/Search/Search.css
@@ -1,8 +1,14 @@
 input {
   width: 100%;
   border: 1px solid #333;
-  padding: 2.75px 7px;
+  padding: 5.75px 10px;
   line-height: 2rem;
-  font-size: 1.3rem;
+  font-size: 1rem;
   border-radius: 15px;
+}
+
+@media screen and (min-width: 768px) {
+  form {
+    grid-column: 1/3;
+  }
 }
