--- a/src/components/Clock/Clock.css
+++ b/src/components/Clock/Clock.css
@@ -1,3 +1,9 @@
 .clock {
-  color: purple;
+  font-size: 2rem;
+  justify-self: flex-end;
+}
+@media screen and (min-width: 768px) {
+  .clock {
+    grid-column: 2;
+  }
 }
