--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -15,6 +15,11 @@
   height: 100vh;
 }
 
+.light {
+  background-color: #fff;
+  height: 100vh;
+}
+
 @media screen and (min-width: 768px) {
   .wrapper {
     width: 80%;
