--- a/src/components/Article/Article.css
+++ b/src/components/Article/Article.css
@@ -7,6 +7,8 @@
   align-items: center;
   white-space: nowrap;
   overflow: hidden;
+  color: unset;
+  text-decoration: underline;
 }
 
 .Article p {
