--- a/src/components/Headlines/Headlines.css
+++ b/src/components/Headlines/Headlines.css
@@ -1,5 +1,9 @@
 .Headlines {
   display: grid;
   grid-gap: 2rem;
-  margin-left: 1rem;
+}
+@media screen and (min-width: 768px) {
+  .Headlines {
+    margin-left: 1rem;
+  }
 }
