--- a/src/components/Bookmarks/Bookmarks.css
+++ b/src/components/Bookmarks/Bookmarks.css
@@ -1,14 +1,9 @@
 .bookmarks {
   display: grid;
+  grid-column: 1/3;
   grid-template-columns: 1fr 1fr 1fr 1fr;
   margin: 0 auto;
   width: 100%;
   height: 120px;
-}
-
-@media screen and (min-width: 768px) {
-  .bookmarks {
-    min-width: 355px;
-    max-width: 475px;
-  }
+  max-width: 475px;
 }
